--- a/src/container/success-info/index.hbs
+++ b/src/container/success-info/index.hbs
@@ -3,9 +3,19 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
 
-<div class="start">
-	<a href="/user" class="button">User</a>
-	<a href="/product-create" class="button">Product</a>
+
+
+<div>
+	<h1>{{info}}</h1>
+	<a href="/user">Вернуться на главную страницу</a>
+
+</div>
+
+<br>
+
+<div class="nav">
+	<a href="/" class="nav__button">Вернуться</a>
+	<a href="/product-create" class="nav__button">Перейти на Product</a>
 </div>
 
 {{!
