--- a/src/container/product-alert/index.hbs
+++ b/src/container/product-alert/index.hbs
@@ -13,8 +13,11 @@
 		</div>
 
 		<div class="form__field">
-			<a href="/product-list" class="form__button">Вернуться назад</a>
+			<a href="/product-list" class="form__button">Корзина</a>
+			<a href="/product-create" class="form__button">Продолжить</a>
 		</div>
+
+
 
 	</div>
 	<div class="nav">
