--- a/src/container/product-edit/index.hbs
+++ b/src/container/product-edit/index.hbs
@@ -4,51 +4,61 @@
 }}
 <main>
 	<section>
+
+		{{#with data}}
+
 		<div class="form">
+
 			<h1 class="form__title">Редактирование товара</h1>
+
 			<form method="post" action="/product-edit">
+
 				<div class="form__content">
+
 					<div class="form__field">
 						<div class="form__info">Информация про товар</div>
 					</div>
-					{{#with data}}
-					{{!-- {{#each product}} --}}
+
 					<div class="form__edit">
 
 						<div class="form__field">
 							<label for="name" class="form__label">Название товара:</label>
-							<input type="text" id="name" class="form__input" value="{{name}}">
+							<input type="text" name="name" class="form__input" value="{{name}}">
 						</div>
+
 						<div class="form__field">
 							<label for="price" class="form__label">Цена:</label>
-							<input type="text" id="price" class="form__input" value="{{price}}">
+							<input type="text" name="price" class="form__input" value="{{price}}">
 						</div>
+
 						<div class="form__field">
 							<label for="id" class="form__label"> ID: </label>
 							<input type="tel" name="id" class="form__input" value="{{id}}">
 						</div>
 
 					</div>
+
 					<div class="form__field">
 						<label for="description" class="form__label">Краткое описание товара:</label>
 						<textarea name="description" id="" cols="30" rows="5"
 							class="form__description">{{description}}</textarea>
-						{{!-- <input type="text" id="description" class="form__input" value="{{description}}"> --}}
 					</div>
-					{{!-- {{/each}} --}}
-
 
 					<div class="form__enter">
 						<button class="form__button blue">Сохранить обновление</button>
-						<a href="/product-delete?id={id}}" class="form__button red"">Удалить товар</a>
-					</div>
-					{{/with}}
+						<a href="/product-delete?id={{id}}" class="form__button red"">Удалить товар</a>
+					</div>					
 
 				</div>
-			</form>
+
+			</form>	
+
 		</div>
 
+		{{/with}}
+
 	</section>
+
 	<section>
 		<div class=" nav">
 							<a href="/" class="nav__button">Вернуться на начальную страницу</a>
@@ -57,17 +67,7 @@
 					</div>
 	</section>
 
-
-
-
 </main>
-
-
-
-
-
-
-
 
 {{!
 Цей код містить лише те, що буде виводитись в
