--- a/src/container/product-list/index.hbs
+++ b/src/container/product-list/index.hbs
@@ -6,25 +6,9 @@
 	<section>
 		<div class="form">
 			<h1 class="form__title">Список товаров</h1>
-			{{#with data.products}}
-			{{#if isEmpty}}
-			<mark>Список продуктов пустой</mark>
 
-			{{else}}
-			{{#each list}}
-			<div class="form__info">
-				<div class="form__name">{{name}}</div>
-				<div class="form__description">{{description}}</div>
-				<div class="form__id">ID: {{id}}</div>
-				{{!-- <div class="form__id">TIME: {{time}}</div> --}}
-				<div class="form__label">
-					<div class="form__price">{{price}}₴</div>
-					<button class="form__button"><a href="/product-edit?id={{id}}">Редактировать</a></button>
-				</div>
-			</div>
-			{{/each}}
-			{{/if}}
-			{{/with}}
+			{{> product-card}}
+
 		</div>
 	</section>
 </main>
